--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Loliwe",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "materialize-css": "^1.0.0-rc.2"
   }
 }
